<resources>
    <string name="app_name">BookToGo</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <string name="hint_username">username</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="btn_login">login</string>
    <string name="btn_register">register</string>
    <string name="btn_link_to_register">No account? Register now.</string>
    <string name="btn_link_to_login">Already Registerd? Click here.</string>
    <string name="welcome">welcome</string>
    <string name="btn_logout">logout</string>
    <string name="name">username</string>
    <string name="title_activity_main">MainActivity</string>
    </resources>

